--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "16.0.0-alpha.12",
     "react-native": "^0.47.0",
     "react-native-linear-gradient": "^2.3.0",
+    "react-native-modal-dropdown": "^0.5.0",
     "react-native-square-grid": "^1.0.2"
   }
 }
